--- a/CSS题目/2.1 CSS与CSS3.md
+++ b/CSS题目/2.1 CSS与CSS3.md
@@ -1,1 +1,141 @@
 # 2.1 CSS与CSS3
+
+## 【真题84】 以下属于CSS3 中全新特性的是（
+
+A．选择器
+B.动画
+C．伸缩盒
+D．阴影
+
+- 答案:BCD。
+
+## 【真题85】 CSS指的是什么?
+
+- 答案:
+- CSS (Cascading Style Sheets）即层叠样式表，
+- 它是一种样式语言，
+  - 用于控制页面的表现(外观和内容排版)。
+- 利用CSS，可以创建各种规则，应用到所有的HTML元素。
+
+## 【真题86】 CSS3新增的属性有
+
+A. column-count
+B.border-radius
+C. box-shadow
+D. background-size
+
+- 答案:ABCD。
+- column-count属性
+  - 用于多列布局，
+  - 可指定允许的最大列数;
+- border-radius属性
+  - 用于设置边框圆角;
+- box-shadow属性
+  - 可向边框添加一个或多个阴影;
+- background-size属性
+  - 可指定背景图像的尺寸或把原图像缩放到合适大小，
+  - 使其适应元素的背景区。
+
+## 【真题87】什么叫渐进增强?它和优雅降级有哪些区别?
+
+- 答案:
+
+- 渐进增强（Progressive Enhancement）
+
+  - 是一种设计思想。
+
+  - 各个浏览器的渲染能力各不相同，
+  - 保证用户在任何环境下，
+    - 都能正常访问核心内容或使用基本功能
+
+- 优雅降级（Graceful Degradation)
+
+  - 也是一种设计思想，
+  - 保证在高版本浏览器中提供最好的体验，
+  - 遇到低版本浏览器再降级进行兼容处理
+
+- 两种思想的区别如下所列。
+
+  - (1）
+    - 渐进增强是向上兼容,
+    - 优雅降级是向下兼容。
+
+  - (2）
+    - 渐进增强是从简单到复杂,
+    - 优雅降级是从复杂到简单。
+  - (3）
+    - 渐进增强关注的是内容，
+    - 优雅降级关注的是浏览体验。
+
+## 【真题88】请谈谈你对CSS Hack的理解。
+
+- 答案:
+- CSS Hack是一种编程技巧，
+  - 它让 CSS代码能兼容各个浏览器，
+    - 避免出现错误的布局。
+- CSS Hack能提升兼容性，
+  - 但还是尽量少用，
+  - 因为每次都要多写几段额外的兼容样式，
+    - 这带来了巨大的维护成本，
+- 并且在浏览器升级后，
+  - 浏览器支持了更多的CSS特性或修正了BUG，
+  - 原先的写法可能就会失效。
+
+## 【真题89】以下浏览器前缀能被E支持的是
+
+A.-ms-
+B.-webkit-
+C.-moz-
+D.-o-
+
+- 答案:A。
+- 浏览器拥有各自的渲染引擎，
+  - 浏览器可以实现自己私有的属性。
+- -webkit-
+  - 可被Chrome或 Safari 支持;
+
+- -moz-
+  - 可被Firefox支持;
+- -o-
+  - 可被早期版本的 Opera支持。
+
+## 【真题90】执行下面的代码，在IE6、IE7、IE8+和 Firefox中的情况是
+
+```
+<style>
+    div {
+        width: 20px;
+        *width: 15px !important;
+        *width: 10px;
+    }
+</style>
+```
+
+A. Firefox和IE8+的宽度为20px;
+
+IE7的宽度为15px; 
+
+IE6的宽度为10px
+
+B. Firefox和IE8+的宽度为20px;
+
+IE7和IE6的宽度为15px
+
+C. Firefox和IE8+的宽度为15px;
+
+IE7的宽度为15px;
+
+ IE6的宽度为10px
+
+D. Firefox和 IE8+的宽度为15px;
+
+IE7和IE6的宽度为10px
+
+- 答案:A。
+- 因为 Firefox和 IE8+会忽略带星号的属性，
+  - 所以它们的宽度为20px。
+- IE6和IE7都能识别带星号的属性，
+  - IE7能够正确提升带!important属性的权重，
+    - 所以IE7的宽度为15px。
+  - IE6不能正确解析!important,
+    - 所以最后的宽度为10px。
