--- a/CSS题目/2.3 选择器和层叠.md
+++ b/CSS题目/2.3 选择器和层叠.md
@@ -197,3 +197,71 @@ D. width
   - 能被继承，
 - 与布局相关的属性（如边框、外边距、内边距、尺寸等）
   - 就不能被继承。
+
+## 【真题116】执行下面的代码,p元素最终的字体颜色是
+
+```
+<style>
+  .bfc p {
+    color: #fc0;
+  }
+  .ovh p {
+    color: #f60;
+  }
+</style>
+
+<div class="bfc ovh">
+  <p>文字颜色</p>
+</div>
+
+```
+
+- 答案:#F60。
+- 当重要性和特殊性都相同的时候，
+  - 所处的位置决定权重，
+    - 越是在后面，权重越高
+
+## 【真题117】链接有4种状态，声明的顺序是怎么样的?
+
+包括未访问（:link)、已访问(:visited)、激活（:active)和悬停（(:hover），
+
+- 答案:
+- 推荐使用LVHA 的顺序
+- 4个状态
+  - 会使用同一个源声明
+  - 特殊性相同
+- 影响权重的只有在样式表中所处的位置了
+
+```
+a:link {
+    color: blue;
+}
+a:visited {
+    color:red;
+}
+a:hover {
+    color: green;
+}
+a:active {
+    color: yellow;
+}
+```
+
+- 当鼠标悬浮在未访问或已访问链接的时候，
+  - 都会同时存在两种状态:
+    - 未访问:link 与:hover
+    - 已访问:visited 与:hover。
+- 如果:hover声明在:link 或:visited 之前
+  - 那么就会被覆盖掉。
+- 当鼠标点中链接的时候，
+  - 会同时存在两种状态: 
+    - :active 与:hover。
+- 如果:active声明在:hover 之前，
+  - 那么会被覆盖掉。
+- :hover与:active
+  - 必须在:link与:visited之后,
+- :active
+  - 必须在:hover之后,
+- :link与:visited，
+  - 顺序可以互换。
+- 将LVHA看成两个单词的组合:love和 hate，更易于记忆。
