第 3 章 特指度和层叠 md

--- a/CSS权威指南（第4版）/第 3 章 特指度和层叠/第 3 章 特指度和层叠.md
+++ b/CSS权威指南（第4版）/第 3 章 特指度和层叠/第 3 章 特指度和层叠.md
@@ -103,11 +103,85 @@ h1 {
   - 1.找到匹配特定元素的所有规则。
 
   - 2．按显式权重排序应用到特定元素上的所有声明。
-    - 以!important标记的规则比没有这
-      一标记的权重高。
+    - 以!important标记的规则
+      - 比没有这一标记的权重高。
 
-- 3.按来源排序应用到特定元素上的所有声明。声明有三个来源:创作人员、读者和
-  用户代理。正常情况下，创作人员编写的样式击败读者提供的样式;读者样式中以!important标记的声明比其他样式权重高，包括创作人员编写的样式中以!important标记的声明;创作人员和读者样式覆盖用户代理的默认样式。
-- 4．按特指度排序应用到特定元素上的所有声明。特指度高的声明具有较高的权重。
-- 5．按声明的前后位置排序应用到特定元素上的所有声明。样式表或文档中靠后的声明
-  权重较高。导入的样式表中的声明放在当前样式表中所有声明的前面。
+  - 3.按来源排序应用到特定元素上的所有声明。
+    - 声明有三个来源:创作人员、读者和用户代理。
+    - 创作人员编写的样式击败读者提供的样式;
+    - 读者样式中以!important标记的声明比其他样式权重高
+    - 创作人员和读者样式覆盖用户代理的默认样式。
+
+  - 4．按特指度排序应用到特定元素上的所有声明。
+    - 特指度高的声明具有较高的权重。
+
+  - 5．按声明的前后位置排序应用到特定元素上的所有声明。
+    - 样式表或文档中靠后的声明权重较高。
+    - 导入的样式表中的声明
+      - 放在当前样式表中所有声明的前面。
+
+### 3.3.1按权重和来源排序
+
+- 如果两个规则应用到同一个元素上
+  - 其中一个以 !important标记
+  - 那么有此标记的规则胜出
+
+- 如果!important 在行内样式中，
+  - 那么行内样式将胜出
+
+- 如果显式权重相同，就要考虑规则的来源。
+  - 一个在创作人员编写的样式表中，
+  - 另一个在读者提供的样式表中，
+  - 那么元素将使用创作人员编写的样式表中的样式
+
+- 在所有来源中，用户代理的默认声明是影响力最低的。
+- 下面按权重从高到低列出:
+  - 1、读者提供的样式中以!important标记的声明。
+  - 2．创作人员编写的样式中以 !important标记的声明。
+  - 3．创作人员编写的常规声明。
+  - 4.读者提供的常规声明。
+  - 5．用户代理的默认声明。
+
+- 创作人员编写的任何样式都会覆盖用户代理的默认样式。
+
+### 3.3.2按特指度排序
+
+- 如果各声明的显式权重和来源相同，
+  - 那么特指度最高的声明胜出
+
+```
+p#bright {
+    color: silver;
+}
+p {
+    color: black;
+}
+```
+
+```
+<p id="bright">Well, hello there!</p>
+```
+
+- p#bright的特指度是0,1,0,1，而p的特指度是0,0,0,1,
+
+### 3.3.3按前后位置排序
+
+- 如果两个规则的显式权重、来源和特指度都相同，
+  - 那么在样式表中的位置靠后的规则胜出。
+
+- 链接样式的推荐顺序是
+  - “link-visited-focus-hover-active” (LVFHA）
+
+- 已访问和未访问的链接都有激活样式:
+  
+
+### 3.3.4 CSS之外的表现提示
+
+- 表现提示（presentational hint)
+  - 例如 font元素。
+- 这种表现提示的特指度为0，
+  - 而且认为出现在创作人员编写的样式表的开头
+- 表现提示将被创作人员或读者提供的样式覆盖，
+  - 但是不会被用户代理的默认样式覆盖。
+- CSS3把表现提示视作用户代理默认样式表的一部分
+  - 而且假定出现在默认样式表的最后
