--- a/CSS权威指南（第4版）/第 4 章 值和单位/第 4 章 值和单位.md
+++ b/CSS权威指南（第4版）/第 4 章 值和单位/第 4 章 值和单位.md
@@ -269,4 +269,336 @@ body {
 
 - 不同字体中的x高度有所不同
 
-#### 单位rem
+#### rem单位
+
+- em相对当前元素的字号计算，
+  - rem 相对根元素计算。
+- 在 HTML中，根元素是 html。
+
+- rem 的实际作用相当于重设字号
+  - font-size: 1rem;都会把字号还原成根元素设定的大小。
+- 1rem是用户的默认字号，
+  - 除非用户为根元素设定了其他字号
+
+- 如果没为根元素设定字号的话
+  - font-size: 1rem的作用与 font-size: initial相同。
+
+#### ch单位
+
+- ch等于渲染时所用字体中“0”(零,U+0030）字形的进距。
+
+- “进距”对应于字体排印中的“进宽”
+- 字形的进宽指
+  - 一个字形的起点到下一个字形的起点之间的距离。
+- 这段距离等于字形本身的宽度加上侧边的间距
+  - （间距可以为正也可以为负)。
+
+- CSS 把 ch单位定义为所用字体中一个零的进宽。
+
+#### 视区相关的单位
+
+- 视区宽度单位（vw)
+  - 这个单位根据视区的宽度计算,然后除以100。
+  - 如果视区的宽度是937像素，那么1vw等于9.37px。
+  - 如果视区的宽度有变，vw的值随之改变。
+
+- 视区高度单位(vh)
+  - 这个单位根据视区的高度计算，然后除以100
+  - 如果视区的高度是650像素,那么1vh等于6.5px
+  - 如果视区的高度有变，vh的值随之改变。
+
+- 视区尺寸最小值单位（vmin)
+  - 这个单位等于视区宽度或高度的1/100，
+    - 始终取宽度和高度中较小的那个
+  - 如果一个视区的宽度为937像素,高度为650像素,
+    - 那么1vmin等于6.5pX。
+- 视区尺寸最大值单位（vmax)
+  - 这个单位等于视区宽度或高度的1/100，
+    - 始终取宽度和高度中较大的那个。
+  - 如果一个视区的宽度为937像素，高度为650像素,
+    - 那么1vmax等于9.37pX。
+
+- 这些单位特别适合用于创建全视区界面，
+  - 例如移动设备的界面，
+  - 因为元素是根据视区的尺寸而变化的，
+  - 不用担心特定情况下视区的具体尺寸。
+
+## 4.4 计算值
+
+- CSS 提供了calc(）值。括号中可以使用简单的数学算式。
+- 允许使用的运算符有+（加)、-（减)、*(乘)、/(除)，以及括号。
+- calc()不允许做指数运算。
+
+- calc()会检查括号中各个值的类型，确保是兼容的。
+- 检查的方式如下:
+
+- 1. +和-号两侧的值必须使用相同的单位类型
+
+  - 5 ＋2.7是有效的
+  - 5em + 2.7无效
+  - 5em + 20px是有效的
+
+- 2，\*计算的两个值中必须有一个是\<number>
+
+  - 2.5rem \* 2 和 2* 2.5rem都是有效的
+  - 2.5rem * 2rem是无效的,这是面积单位
+
+- 3./计算的两个值中右边的那个必须是\<number>。
+  - 左边是\<integer>时,结果为一个\<number>值;
+    - 否则，结果的单位与左边的值一样。
+  - 30em / 2.75是有效的，
+  - 30/ 2.75em是无效的。
+
+- 4．任何情况下都不能除以零。
+  - 30px/0
+
+- ＋和-运算符的两侧必须有空白，*和/没有这一限制
+
+- calc()中的算式至少可以使用20个算子，
+  - 算子可以是数字、百分数，也可以是大小量（长度)。
+  - 超过这一限制的算式应该视为无效的。
+
+## 4.5属性值
+
+- 可以使用样式对应的元素上的 HTML 属性值。
+  - 方法是使用attr()表达式。
+
+- 使用生成的内容时，可以插入任何属性的值
+
+```
+p::before {
+    content: attr(id);
+}
+```
+
+- 这个表达式把id属性的值加在有id属性的段落前面。
+
+## 4.6颜色
+
+### 4.6.1具名颜色
+
+- 如果只想使用基本的颜色,最简单的方法是使用颜色的名称
+- CSS 把这种颜色称为具名颜色(named color)。
+- 早期，CSS中有16个基本的颜色关键字，
+
+![image-20220509100200213](第 4 章 值和单位.assets/image-20220509100200213.png)
+
+- 最新的CSS颜色规范包含这16个具名颜色，
+  - 不过它们属于一个更大的列表，一共有148个颜色关键字。
+
+### 4.6.2 RGB和 RGBa颜色
+
+- 计算机中的颜色按不同比例的红绿蓝混合而成，
+  - 经常被称为RGB 颜色。
+- 显示器上的一个点是一个像素。
+- 采用这种方法创建的颜色有4种指定方式。
+
+#### 函数式RGB颜色
+
+- 有两种颜色值使用函数式RGB表示法，
+  - 而不使用十六进制表示法。
+- 这种颜色值的一般句法是 rgb(color)，
+  - 其中 color是三个值，可以是百分数或整数。
+  - 百分数的取值范围是0~100%，
+  - 整数的取值范围是0~255。
+
+- 使用百分数表示白色和黑色的方式如下:
+
+```
+rgb(100%, 100%, 100%)
+rgb(0%, 0%, 0%)
+```
+
+- 使用三个整数表示的方法如下:
+
+```
+rgb(255, 255, 255)
+rgb(0, 0, 0)
+```
+
+- 一个颜色值中不能混用整数和百分数
+  - rgb(255,66.67%, 50%）是无效的,将被忽略。
+
+- 超出取值范围的数将“裁剪”为最近的边界值。
+
+#### RGBa颜色
+
+- 这种表示法在RGB 的三个通道后面增加了一个 alpha值，
+  - 即“red-green-blue-alpha”，简称RGBa。
+  - 这里的alpha指alpha通道,用于衡量不透明度。
+
+- alpha值始终是0-1范围内的实数。
+  - 如果想让颜色完全透明，把 alpha值设为0;
+  - 如果想完全不透明，应该设为1.
+- 超出范围的值要么被忽略，要么被重置为最近的有效值
+- alpha值不能使用\<percentage>表示
+
+#### 十六进制RGB值
+
+```
+h1 {
+    color: #FF0000;
+}
+```
+
+- 把三个00到 FF 范围内的十六进制数串在一起表示一个颜色。
+- 一般的句法是#RRGGBB。
+  - 这三个数之间没有空格、逗号或其他分隔符。
+
+- 十六进制表示法与三个整数表示法在数值上是等效的。
+  - rgb(255,255,255）与#FFFFFF 完全等效，
+  - rgb(51,102,128）则与#336680一样。
+- 如果每个十六进制数中的两个数字相等，使用简短表示法。
+  - 一般的句法是#RGB:
+
+```
+h1 {
+    color: #000;
+}
+```
+
+- 浏览器会把每个数字复制成两个。
+  - #F00变成了#FF0000，
+  - #6FA变成了#66FFAA,#FFF 变成了#FFFFFF
+
+#### 十六进制RGBa 颜色
+
+- 有个新的十六进制表示法在后面添加个十六进制值,
+  - 表示 alpha通道的值。
+
+```
+p.one {
+    color: #000000FF;
+}
+p.two {
+    color: #000000CC;
+}
+```
+
+- 如果四个十六进制值中的两个数字都一样，可以简写。
+  - #663399AA 可以写成#639A。
+- 如果有任何一个十六进制数的两个数字不一样，
+  - 就必须完整写出八个数字。
+  - #663399CA不能简写为#639CA。
+
+### 4.6.3 HSL 和 HSLa颜色
+
+- HSL是 Hue（色相)、Saturation(饱和度)和 Lightness（明度)
+  - 色相是角度值，取值范围是0~360,
+  - 饱和度是从0(无饱和度)~100(完全饱和)的百分数,
+  - 明度是从0(全暗)~100(全明)的百分数。
+
+- 色相分布在一个色相环上，
+  - 随着角度的旋转得到色谱上的不同颜色。
+  - 0°是红色，旋转360°又回到红色
+
+- 饱和度衡量颜色的强度。
+  - 饱和度为0%时，得到的都是不太暗的灰色;
+  - 饱和度为100%时,在明度一定时，色相最饱满。
+- 明度定义颜色有多暗或多亮。
+  - 明度为0%时,始终为黑色;
+  - 明度为100%时,得到的是白色
+
+```
+p.one {
+    color: hsl(0, 0%, 0%);
+}
+
+p.two {
+    color: hsl(60%, 0%, 25%);
+}
+```
+
+
+
+- 把 HTML4定义的16个颜色关键字
+
+![image-20220509110135197](第 4 章 值和单位.assets/image-20220509110135197.png)
+
+- HSLa在 HSL的三个值后面加上一个alpha值，
+  - 取值范围是0~1。
+
+```
+p.one {
+    color: hsl(0, 0%, 0%, 1);
+}
+
+p.two {
+    color: hsl(60%, 0%, 25%, 0.8);
+}
+```
+
+### 4.6.4颜色关键字
+
+- 有两个特殊的关键字
+  - 可以在任何允许使用颜色值的地方使用:
+  - transparent和currentcolor。
+
+- transparent表示完全透明的颜色。
+  - 它与 rgba(0,0,0,0)等效。
+- 这个关键字是元素背景色的默认值。
+- 用它为元素定义只占空间但不可见的边框
+
+- currentColor的意思是，“当前元素color属性计算得到的值”。
+
+```
+main {
+    color: gray;
+    border-color: currentColor;
+}
+```
+
+- 第二个声明使用currentColor复制color属性计算得到的值
+  - 这里是 gray
+
+## 4.7角度
+
+- 角度一般使用\<angle>表示,
+  - 即一个\<number>后跟下列四个单位中的一个。
+
+- deg
+  - 度数，完整的圆周是360度。
+- grad
+  - 百分度, 完整的圆周是400百分度。
+- rad
+  - 弧度，完整的圆周是2Π（近似于6.28)。
+
+- turn
+  - 圈数,一个完整的圆周是一圈
+  - 旋转10圈就是10turn
+  - 复数形式turns是无效的，
+
+- 角度单位最常在2D 和3D变形中使用，
+- HSL颜色中不使用角度单位,
+- 色相角度始终是度数，而且不加deg单位。
+
+![image-20220509141900569](第 4 章 值和单位.assets/image-20220509141900569.png)
+
+## 4.8时间和频率
+
+- 属性的值为一段时间时,使用\<time>表示,
+- 它是一个\<number>值后跟s(秒)或ms(毫秒)
+- 时间值最常在过渡和动画中使用，
+  - 用于定义持续时间或延迟时间。
+
+- 视听 CSS 也能用到时间值,用于定义持续时间或延迟时间。
+
+- 视听CSS中还有一种值\<frequency>，
+  - 它是一个\<number>值后跟Hz(赫兹)或kHz(千赫兹)。
+  - 这个单位的标识符不区分大小写,
+    - Hz和hz是等效的
+
+## 4.9位置
+
+- 位置值用于指定图像在背景区域中的位置，
+  - 使用\<position>表示。
+
+- 位置值的句法结构相当复杂:
+
+![image-20220509143401674](第 4 章 值和单位.assets/image-20220509143401674.png)
+
+- 如果只声明一个值，那么第二个值将被设为center。
+  - left的作用与left center一样
+  - ,25%的作用与25% center一样。
+
+- 如果声明两个值（像上面那样隐式或显式)，而且第一个值是长度或百分数，那么前一个值始终是横向值。因此，对25% 35px来说，25%是横向距离，35px是纵向距离。如果调换顺序，写成35px 25%，那么35px就是横向距离，而25%变成了纵向距离。这也意味着，如果写成25% left或35px right，整个值都无效，因为两个值都是横向距离，没有指定纵向距离（类似地，right left或top bottom也是无效的，将被忽略)。而写成left 25%或right 35px则没问题，因为既指定了横向距离（通过关键字)，也指定了纵向距离(通过百分数或长度)。
