第 4 章 值和单位.md

--- a/CSS权威指南（第4版）/第 4 章 值和单位/第 4 章 值和单位.md
+++ b/CSS权威指南（第4版）/第 4 章 值和单位/第 4 章 值和单位.md
@@ -599,6 +599,106 @@ main {
 
 - 如果只声明一个值，那么第二个值将被设为center。
   - left的作用与left center一样
-  - ,25%的作用与25% center一样。
+  - 25%的作用与25% center一样。
 
-- 如果声明两个值（像上面那样隐式或显式)，而且第一个值是长度或百分数，那么前一个值始终是横向值。因此，对25% 35px来说，25%是横向距离，35px是纵向距离。如果调换顺序，写成35px 25%，那么35px就是横向距离，而25%变成了纵向距离。这也意味着，如果写成25% left或35px right，整个值都无效，因为两个值都是横向距离，没有指定纵向距离（类似地，right left或top bottom也是无效的，将被忽略)。而写成left 25%或right 35px则没问题，因为既指定了横向距离（通过关键字)，也指定了纵向距离(通过百分数或长度)。
+- 如果声明两个值
+  - 第一个值是长度或百分数，
+  - 前一个值始终是横向值。
+- 25% 35px来说，
+  - 25%是横向距离，35px是纵向距离。
+- 如果调换顺序，写成35px 25%，
+  - 35px就是横向距离，25%变成了纵向距离。
+- 如果写成25% left或35px right，整个值都无效，
+  - 因为两个值都是横向距离，没有指定纵向距离
+
+- 如果声明四个值
+  - 必须有两个长度或百分数，
+  - 而且前面都得是关键字。
+- 长度或百分数指定偏移距离，
+  - 而关键字定义偏移以哪一边计算。
+- right 10px bottom 30px表示
+  - 右边向左偏移10像素，
+  - 底边向上偏移30像素。
+- top 50% left 35px表示
+  - 顶边向下偏移50%，
+  - 左边向右偏移35像素。
+
+- 三个值的处理方式跟四个值一样，
+  - 不过最后一个偏移量将被设为零(即不偏移)。
+  - right 20px top 的作用与right 20px top 0一样。
+
+## 4.10自定义值
+
+- “自定义属性”的作用其实在CSS 中创建变量。
+  - 它并不创建特殊的CSS属性（像color或font之类的)。
+
+```
+html {
+    --base-color: #639;
+    --highlight-color: #AEA;
+}
+
+h1 {
+    color: var(--base-color);
+}
+
+h2 {
+    color: var(--highlight-color);
+}
+```
+
+- 自定义值--base-color和 --highlight-color的定义。
+- 这不是某种特殊的颜色类型,
+  - 而是根据值的作用而选择的名称。
+- 自定义标识符以两个连字符开头(--)
+  - 调用的方法是使用var()值类型
+- 这些名称是区分大小写的
+  - --main-color和 --Main-color是完全不同的
+
+- 这些自定义标识符通常被称为“CSS变量”
+- 自定义属性有个有趣的特性:
+  - 作用域在一定的范围内。
+
+```
+html {
+    --base-color: #639;
+}
+
+aside {
+    --base-color: #F60;
+}
+
+h1 {
+    color: var(--base-color);
+}
+```
+
+```
+<body>
+  <h1>Heading 1</h1>
+  <p>Main text.</p>
+  <aside>
+    <h1>Heading 1</h1>
+    <p>An aside.</p>
+  </aside>
+  <h1>Heading 1</h1>
+  <p>Main text.</p>
+</body>
+
+```
+
+![image-20220509175211307](第 4 章 值和单位.assets/image-20220509175211307.png)
+
+- 能查询特性的@supports()。
+  - 使用变量的样式规则能隐藏起来，不产生影响;
+
+```
+@supports (color:var(--custom)) {
+    /* 使用变量的样式 */
+}
+
+@supports (--custom:value) {
+    /* 替代样式 */
+}
+```
+
