第 4 章 值和单位.xmind

--- a/CSS权威指南（第4版）/第 4 章 值和单位/第 4 章 值和单位.md
+++ b/CSS权威指南（第4版）/第 4 章 值和单位/第 4 章 值和单位.md
@@ -37,11 +37,11 @@ a:link, a:visited {
 - initial关键字把属性的值设为预定义的初始值
   - 相当于“重设”值
 
-- unset 关键字是inherit和initial的通用替身。
-  - 对继承的属性来说，unset的作用与inherit一样;
-  - 对不继承的属性来说，unset的作用与initial一样。
+- unset 关键字是inherit和initial的通用替身
+  - 对继承的属性来说，unset的作用与inherit一样
+  - 对不继承的属性来说，unset的作用与initial一样
 
-- 这三个全局关键字在所有属性中都可以使用。
+- 这三个全局关键字在所有属性中都可以使用
 - all属性只接受这几个全局关键字
 
 ![image-20220508203216543](第 4 章 值和单位.assets/image-20220508203216543.png)
@@ -258,8 +258,7 @@ body {
 
 #### em 和 ex单位
 
-- em和 ex
-  - 1 em 等于元素的 font-size属性值。
+- 1 em 等于元素的 font-size属性值。
 - 如果元素的font-size为14像素，
   - 1em就等于14像素。
 
@@ -352,7 +351,7 @@ body {
 - 4．任何情况下都不能除以零。
   - 30px/0
 
-- ＋和-运算符的两侧必须有空白，*和/没有这一限制
+- 5. ＋和-运算符的两侧必须有空白，*和/没有这一限制
 
 - calc()中的算式至少可以使用20个算子，
   - 算子可以是数字、百分数，也可以是大小量（长度)。
@@ -583,7 +582,7 @@ main {
 
 - 视听 CSS 也能用到时间值,用于定义持续时间或延迟时间。
 
-- 视听CSS中还有一种值\<frequency>，
+- 视听CSS中还有一种值\<frequency>
   - 它是一个\<number>值后跟Hz(赫兹)或kHz(千赫兹)。
   - 这个单位的标识符不区分大小写,
     - Hz和hz是等效的
@@ -593,7 +592,7 @@ main {
 - 位置值用于指定图像在背景区域中的位置，
   - 使用\<position>表示。
 
-- 位置值的句法结构相当复杂:
+- 位置值的句法结构相当复杂
 
 ![image-20220509143401674](第 4 章 值和单位.assets/image-20220509143401674.png)
 
@@ -647,9 +646,7 @@ h2 {
 }
 ```
 
-- 自定义值--base-color和 --highlight-color的定义。
-- 这不是某种特殊的颜色类型,
-  - 而是根据值的作用而选择的名称。
+- 根据值的作用而选择的名称。
 - 自定义标识符以两个连字符开头(--)
   - 调用的方法是使用var()值类型
 - 这些名称是区分大小写的
